Create main styling for site

--- a/source/index.html
+++ b/source/index.html
@@ -8,5 +8,18 @@ stylesheet-hrefs:
 script-srcs:
   - /js/default.js
 ---
-<h1>Hey there</h1>
-<p>How's it going?</p>
+<div class="c-content-container">
+
+  <div class="c-page-intro">
+    <h1 class="c-page-intro__title">Testing Ground</h1>
+    <p class="c-page-intro__text">This site is my testing ground for various web technology</p>
+  </div>
+
+
+  <div class="c-main-content">
+    <h2 class="u-font-heading">Tests</h2>
+    <div class="o-flex-center">
+      <a class="c-button c-button--on-dark u-flex-1" href="/instashop">Instashop</a>
+    </div>
+  </div>
+</div>
