Replace instashop test with photo collage test

--- a/source/index.html
+++ b/source/index.html
@@ -19,7 +19,7 @@ script-srcs:
   <div class="c-main-content">
     <h2 class="u-font-heading">Tests</h2>
     <div class="o-flex-center">
-      <a class="c-button c-button--on-dark u-flex-1" href="/instashop">Instashop</a>
+      <a class="c-button c-button--on-dark u-flex-1" href="/photo-collage">Photo Collage</a>
     </div>
   </div>
 </div>
