--- a/source/photo-collage/index.html
+++ b/source/photo-collage/index.html
@@ -1,9 +1,9 @@
 ---
 layout: page
 stylesheet-hrefs:
-- /css/instashop.css
+- /css/photo-collage.css
 ---
 
 <div>
-  Instagram shop testing.
+  Photo collage testing.
 </div>
