--- a/source/photo-collage/index.html
+++ b/source/photo-collage/index.html
@@ -2,8 +2,20 @@
 layout: page
 stylesheet-hrefs:
 - /css/photo-collage.css
+script-srcs:
+- https://cdn.jsdelivr.net/npm/vue/dist/vue.js
+- /js/photo-collage.js
 ---
 
-<div>
+<h2>
   Photo collage testing.
+</h2>
+<div>
+  <div class="c-collage-container" id="vue-app">
+    <div class="c-member" v-for="person in clubData">
+      <p class="c-member__person">${ person.name }</p>
+      <p class="c-member__location">${ person.location.toUpperCase() }</p>
+      <img class="c-member__img" v-if="showImg(person)" v-bind:src=person.imageUrl v-bind:alt=person.name>
+    </div>
+  </div>
 </div>
