Fix alignment and behavior of home page buttons with nested flex

--- a/source/index.html
+++ b/source/index.html
@@ -17,7 +17,12 @@ stylesheet-hrefs:
   <div class="c-main-content">
     <h2 class="u-font-heading">Tests</h2>
     <div class="o-flex-center">
-      <a class="c-button c-button--on-dark u-flex-1" href="/photo-collage">Photo Collage</a>
+      <div class="c-button c-button--on-dark u-flex-1 o-flex-center u-align-items-center">
+        <a class="c-button__link u-flex-1" href="/photo-collage">Photo Collage</a>
+      </div>
+      <div class="c-button c-button--on-dark u-flex-1 o-flex-center u-align-items-center">
+        <a class="c-button__link u-flex-1" href="/carousel">Carousel</a>
+      </div>
     </div>
   </div>
 </div>
