Get rid of Individuals section - only grouping now

--- a/source/photo-collage/index.html
+++ b/source/photo-collage/index.html
@@ -12,21 +12,6 @@ script-srcs:
 </h2>
 <div id="vue-app">
   <h3>
-    <input type="checkbox" id="checkIndiv" v-model="checked">
-    <label for="checkIndiv">Individuals</label>
-  </h3>
-  <div>
-    <div class="c-collage-container" v-if="checked">
-      <div class="c-member" v-for="person in clubData">
-        <p class="c-member__person">${ person.name }</p>
-        <p class="c-member__location">${ person.location.toUpperCase() }</p>
-        <img class="c-member__img" v-if="showImg(person)" v-bind:src=person.imageUrl v-bind:alt=person.name>
-      </div>
-    </div>
-  </div>
-</div>
-<div id="vue-app-2">
-  <h3>
     <input type="checkbox" id="checkGroups" v-model="checked">
     <label for="checkGroups">Groups</label>
   </h3>
@@ -37,13 +22,8 @@ script-srcs:
         <p class="c-person__name">${ person.name }</p>
         <p class="c-person__location" v-if="showLocation(person)">${ person.location.toUpperCase() }</p>
       </div>
-      <photo-display v-bind:image-urls="group.imageUrls">
+      <photo-display v-if="showPhotos" v-bind:image-urls="group.imageUrls">
       </photo-display>
-      <!-- <div class="u-siema">
-        <div v-for="imageUrl in group.imageUrls">
-          <img class="c-group__img" v-if="showImgGroup(group)" v-bind:src="imageUrl" alt="Bike group photo">
-        </div>
-      </div> -->
     </div>
   </div>
 </div>
